Styled scrollbar and prevent it from moving content

--- a/TarkovSauce.Client/wwwroot/css/app.css
+++ b/TarkovSauce.Client/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-﻿:root {
+:root {
     --sidebar-bg: linear-gradient(180deg, #fa810090 0%, #fa810040 90%);
     --background-l1: #202124;
     --font-l1: #d9d9d9CC;
@@ -22,6 +22,10 @@
     --border-radius-l2: 0.3rem;
     --toast-succ: #004515DD;
     --toast-err: #45000cDD;
+}
+
+html {
+    overflow-y: scroll;
 }
 
 a{
@@ -99,4 +103,16 @@ h1:focus {
     .flex-column, .navbar-brand {
         padding-left: env(safe-area-inset-left);
     }
+}
+
+::-webkit-scrollbar {
+    width: 2px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--primary-90);
 }
